force-app/main/default/objects/Case__c/fields/date_field__c.field-meta.xml
<CustomField>
    <fullName>date_field__c</fullName>
    <formula>DATEVALUE(date_time__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>date field</label>
    <type>Date</type>
</CustomField>