force-app/main/default/objects/Case__c/fields/date_time__c.field-meta.xml
<CustomField>
    <fullName>date_time__c</fullName>
    <label>date time</label>
    <type>DateTime</type>
</CustomField>