force-app/main/default/objects/Case__c/fields/Mode_Code__c.field-meta.xml
<CustomField>
    <fullName>Mode_Code__c</fullName>
    <label>Mode Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>