force-app/main/default/objects/Case__c/fields/Prod_Cod_Fod__c.field-meta.xml
<CustomField>
    <fullName>Prod_Cod_Fod__c</fullName>
    <label>Prod Cod Fod</label>
    <length>255</length>
    <type>Text</type>
</CustomField>