force-app/main/default/objects/Case__c/fields/Prod_Type__c.field-meta.xml
<CustomField>
    <fullName>Prod_Type__c</fullName>
    <label>Prod Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>