force-app/main/default/objects/Case__c/fields/Type_Code__c.field-meta.xml
<CustomField>
    <fullName>Type_Code__c</fullName>
    <label>Type Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>