force-app/main/default/objects/Case__c/listViews/Account_Qu_Case.listView-meta.xml
<ListView>
    <fullName>Account_Qu_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Account Qu</label>
    <queue>Account_Qu</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>